@@ -12,8 +12,8 @@ section \<open>Least Fixpoint (Datatype) Operation on Bounded Natural Functors\<
 theory BNF_Least_Fixpoint
 imports BNF_Fixpoint_Base
 keywords
-  "datatype" :: thy_decl and
-  "datatype_compat" :: thy_decl
+  "datatype" :: thy_defn and
+  "datatype_compat" :: thy_defn
 begin
 
 lemma subset_emptyI: "(\<And>x. x \<in> A \<Longrightarrow> False) \<Longrightarrow> A \<subseteq> {}"
