@@ -7,8 +7,8 @@ section \<open>Function Definitions and Termination Proofs\<close>
 theory Fun_Def
   imports Basic_BNF_LFPs Partial_Function SAT
   keywords
-    "function" "termination" :: thy_goal and
-    "fun" "fun_cases" :: thy_decl
+    "function" "termination" :: thy_goal_defn and
+    "fun" "fun_cases" :: thy_defn
 begin
 
 subsection \<open>Definitions with default value\<close>
