@@ -11,7 +11,7 @@ section \<open>Extensible records with structural subtyping\<close>
 theory Record
 imports Quickcheck_Exhaustive
 keywords
-  "record" :: thy_decl and
+  "record" :: thy_defn and
   "print_record" :: diag
 begin
 
