@@ -5,7 +5,7 @@
 section \<open>Setup for State Space Locales \label{sec:StateSpaceLocale}\<close>
 
 theory StateSpaceLocale imports StateFun 
-keywords "statespace" :: thy_decl
+keywords "statespace" :: thy_defn
 begin
 
 ML_file \<open>state_space.ML\<close>
